--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
+.button-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    width: -moz-fit-content;
+    margin-bottom: 6px;
+}
+
 .button-container input[type=button] {
+    display: block;
     width: 320px;
     height: 30px;
     text-align: left;
@@ -16,8 +25,22 @@
     background-color: #e0e0e5;
 }
 
+.button-container .entry {
+    display: block;
+}
+.button-container .entry input[type=button] {
+    display: inline-block;
+}
+
+.column {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
 .button-container input[type=text] {
-    width: 320px;
+    width: 100px;
     height: 15px;
     text-align: left;
     margin-top: 4px;
@@ -56,6 +79,7 @@
     width: -moz-fit-content;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 10px;
 }
 
 .legend-header {
